// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should work with jsx client transform > should work with CSS Variables transform to inline style 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div style=\\"--color: red;\\">Hello, World!</div>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with bind api 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setAttr as _setAttr$ } from "essor";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const value = 1;
(() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [2]);
  _setAttr$(_nodes[0], "value", value);
  _setAttr$(_nodes[0], "updateValue", _value => value = _value);
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with comment in JSX 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setAttr as _setAttr$ } from "essor";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const value = 1;
(() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [2]);
  _setAttr$(_nodes[0], "value", value);
  _setAttr$(_nodes[0], "updateValue", _value => value = _value);
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with concurrent mode 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div data-concurrent></div>"),
  _tmpl$2 = _template$("<div>Concurrent Mode Content</div>");
const ConcurrentMode = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(ConcurrentMode, {
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with concurrent mode and suspense 1`] = `
"import { createComponent as _createComponent$, template as _template$ } from "essor";
const _tmpl$ = _template$("<div>Concurrent Mode Suspended Content</div>"),
  _tmpl$2 = _template$("<div>Loading...</div>");
const element = _createComponent$(ConcurrentMode, {
  "children": [_createComponent$(Suspense, {
    "fallback": (() => {
      const _el6 = _tmpl$2();
      return _el6;
    })(),
    "children": [(() => {
      const _el5 = _tmpl$();
      return _el5;
    })()]
  })]
});"
`;

exports[`should work with jsx client transform > should work with conditional rendering 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<div></div>"),
  _tmpl$2 = _template$("<p>Visible Content</p>"),
  _tmpl$3 = _template$("<span>True</span>"),
  _tmpl$4 = _template$("<span>False</span>");
const isVisible = true;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => isVisible && (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })());
  _insert$(_nodes[0], () => isVisible ? (() => {
    const _el3 = _tmpl$3();
    return _el3;
  })() : (() => {
    const _el4 = _tmpl$4();
    return _el4;
  })());
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with context 1`] = `
"import { createComponent as _createComponent$, template as _template$ } from "essor";
const _tmpl$ = _template$("<div>Themed Content</div>");
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const element = _createComponent$(ThemeContext.Provider, {
  "value": "dark",
  "children": [(() => {
    const _el2 = _tmpl$();
    return _el2;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with context and memo combination 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setAttr as _setAttr$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div>Memo Content</div>");
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const MemoComponent = ({
  theme
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "data-theme", theme);
  return _el;
})();
MemoComponent._memo = true;
const element = _createComponent$(ThemeContext.Provider, {
  "value": "dark",
  "children": [_createComponent$(MemoComponent, {
    "theme": "dark"
  })]
});"
`;

exports[`should work with jsx client transform > should work with context providers 1`] = `
"import { createComponent as _createComponent$, template as _template$ } from "essor";
const _tmpl$ = _template$("<div data-theme=\\"dark\\">Themed Content</div>"),
  _tmpl$2 = _template$("<div>Themed Content</div>");
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const element = _createComponent$(ThemeContext.Provider, {
  "value": "dark",
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with custom hooks in components 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setAttr as _setAttr$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div>Hook Content</div>");
const useCustomHook = () => ({
  value: 'custom'
});
const Component = () => {
  const {
    value
  } = useCustomHook();
  return (() => {
    const _el = _tmpl$();
    const _nodes = _mapNodes$(_el, [1]);
    _setAttr$(_nodes[0], "data-hook", value);
    return _el;
  })();
};
const element = _createComponent$(Component, {});"
`;

exports[`should work with jsx client transform > should work with dynamic class names 1`] = `
"import { computed as _computed$, template as _template$, mapNodes as _mapNodes$, setClass as _setClass$ } from "essor";
const _tmpl$ = _template$("<div>Dynamic Class</div>");
const isActive = true;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setClass$(_nodes[0], _computed$(() => isActive ? 'active' : ''));
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with dynamic style transform to inline style 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setStyle as _setStyle$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const color = "red";
const style = {
  color,
  fontSize: '16px'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setStyle$(_nodes[0], style);
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with dynamic styles 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div style=\\"fontSize:16px;\\">Dynamic Style</div>");
const color = 'red';
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with error boundaries 1`] = `
"import { template as _template$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div>Error occurred!</div>"),
  _tmpl$2 = _template$("<div>Protected Content</div>");
const ErrorBoundary = ({
  children
}) => {
  try {
    return children;
  } catch (error) {
    return (() => {
      const _el = _tmpl$();
      return _el;
    })();
  }
};
const element = _createComponent$(ErrorBoundary, {
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with error boundaries2 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div data-error-boundary></div>"),
  _tmpl$2 = _template$("<div>Protected Content</div>"),
  _tmpl$3 = _template$("<div>Error occurred!</div>");
const ErrorBoundary = ({
  children,
  fallback
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  _insert$(_nodes[0], () => fallback);
  return _el;
})();
const element = _createComponent$(ErrorBoundary, {
  "fallback": (() => {
    const _el4 = _tmpl$3();
    return _el4;
  })(),
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with event handlers 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, addEventListener as _addEventListener$ } from "essor";
const _tmpl$ = _template$("<button>Click me</button>");
const handleClick = () => console.log('clicked');
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _addEventListener$(_nodes[0], "click", handleClick);
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with forwardRef and memo 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div>Forward Ref Memo:</div>");
const ForwardRefMemoComponent = React.memo(React.forwardRef((props, ref) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => props.value);
  _setAttr$(_nodes[0], "ref", ref);
  return _el;
})()));
const element = _createComponent$(ForwardRefMemoComponent, {
  "value": 42,
  "ref": React.createRef()
});"
`;

exports[`should work with jsx client transform > should work with forwardRef components 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div></div>"),
  _tmpl$2 = _template$("Forward Ref Content");
const ForwardRefComponent = ({
  children
}, ref) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  _setAttr$(_nodes[0], "ref", ref);
  return _el;
})();
const element = _createComponent$(ForwardRefComponent, {
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with fragments and keys and values 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$, Fragment as _Fragment$ } from "essor";
const _tmpl$ = _template$("<div></div>"),
  _tmpl$2 = _template$("<div key=\\"1\\">First</div>"),
  _tmpl$3 = _template$("<div key=\\"2\\">Second</div>"),
  _tmpl$4 = _template$("<div>First</div>"),
  _tmpl$5 = _template$("<div>Second</div>");
const val = 'test';
const Children = ({
  children
}) => {
  return (() => {
    const _el = _tmpl$();
    const _nodes = _mapNodes$(_el, [1]);
    _insert$(_nodes[0], () => children);
    return _el;
  })();
};
const element = _Fragment$({
  "children": [val, _createComponent$(Children, {}), (() => {
    const _el4 = _tmpl$4();
    return _el4;
  })(), (() => {
    const _el5 = _tmpl$5();
    return _el5;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with head management 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<head></head>"),
  _tmpl$2 = _template$("<title>Page Title</title>"),
  _tmpl$3 = _template$("<meta name=\\"description\\" content=\\"Page description\\"></meta>"),
  _tmpl$4 = _template$("<meta></meta>");
const Head = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(Head, {
  "children": [(() => {
    const _el4 = _tmpl$2();
    return _el4;
  })(), (() => {
    const _el5 = _tmpl$4();
    return _el5;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with lazy components 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div data-lazy></div>"),
  _tmpl$2 = _template$("Lazy Content");
const LazyComponent = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
LazyComponent._lazy = true;
const element = _createComponent$(LazyComponent, {
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with list rendering 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$ } from "essor";
const _tmpl$ = _template$("<ul></ul>"),
  _tmpl$2 = _template$("<li></li>");
const items = ['Item 1', 'Item 2', 'Item 3'];
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => items.map((item, index) => (() => {
    const _el2 = _tmpl$2();
    const _nodes2 = _mapNodes$(_el2, [1]);
    _insert$(_nodes2[0], () => item);
    _setAttr$(_nodes2[0], "key", index);
    return _el2;
  })()));
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with memo and custom comparison 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div>Memo:</div>");
const MemoComponent = ({
  value
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => value);
  return _el;
})();
MemoComponent._memo = true;
MemoComponent._compare = (prev, next) => prev.value === next.value;
const element = _createComponent$(MemoComponent, {
  "value": 42
});"
`;

exports[`should work with jsx client transform > should work with multiple contexts 1`] = `
"import { createComponent as _createComponent$, template as _template$ } from "essor";
const _tmpl$ = _template$("<div data-theme=\\"dark\\" data-user=\\"John\\">Nested Context Content</div>"),
  _tmpl$2 = _template$("<div>Nested Context Content</div>");
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const UserContext = {
  Provider: ({
    value,
    children
  }) => children
};
const cla = class {
  static a = 1;
  static b = 2;
  static c = 3;
  static d = 4;
  static e = 5;
};
const element = _createComponent$(ThemeContext.Provider, {
  "value": "dark",
  "children": [_createComponent$(UserContext.Provider, {
    "value": {
      name: 'John'
    },
    "v1": undefined,
    "v2": null,
    "v3": true,
    "v4": false,
    "v5": 1,
    "v6": 1.1,
    "v7": "1",
    "v8": Symbol('1'),
    "v9": cla,
    "v10": new Date(),
    "children": [(() => {
      const _el5 = _tmpl$2();
      return _el5;
    })()]
  })]
});"
`;

exports[`should work with jsx client transform > should work with multiple event handlers 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, addEventListener as _addEventListener$ } from "essor";
const _tmpl$ = _template$("<div>Multiple Events</div>");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _addEventListener$(_nodes[0], "click", () => console.log('clicked'));
  _addEventListener$(_nodes[0], "mouseenter", () => console.log('mouse enter'));
  _addEventListener$(_nodes[0], "mouseleave", () => console.log('mouse leave'));
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with nested components and props 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div>Name:<!>, Age:</div>"),
  _tmpl$2 = _template$("<div></div>");
const Child = ({
  name,
  age
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 4]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  _insert$(_nodes[0], () => age);
  return _el;
})();
const Parent = () => (() => {
  const _el2 = _tmpl$2();
  const _nodes2 = _mapNodes$(_el2, [1]);
  _insert$(_nodes2[0], () => _createComponent$(Child, {
    "name": "John",
    "age": 25
  }));
  _insert$(_nodes2[0], () => _createComponent$(Child, {
    "name": "Jane",
    "age": 23
  }));
  return _el2;
})();"
`;

exports[`should work with jsx client transform > should work with portal components 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div></div>"),
  _tmpl$2 = _template$("<div>Modal Content</div>");
const Portal = ({
  children,
  target
}) => {
  return (() => {
    const _el = _tmpl$();
    const _nodes = _mapNodes$(_el, [1]);
    _insert$(_nodes[0], () => children);
    _setAttr$(_nodes[0], "data-portal-target", target);
    return _el;
  })();
};
const element = _createComponent$(Portal, {
  "target": "modal",
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with portals and ref forwarding 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div></div>"),
  _tmpl$2 = _template$("<div>Modal Content with Ref</div>");
const Portal = ({
  children,
  target
}, ref) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  _setAttr$(_nodes[0], "ref", ref);
  _setAttr$(_nodes[0], "data-portal-target", target);
  return _el;
})();
const element = _createComponent$(Portal, {
  "target": "modal",
  "ref": React.createRef(),
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with refs 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setAttr as _setAttr$ } from "essor";
const _tmpl$ = _template$("<div>Reference Element</div>");
const myRef = {
  current: null
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "ref", myRef);
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with static style transform to inline style 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div style=\\"color:red;fontSize:16px;\\">Hello, World!</div>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > should work with strict mode 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div data-strict></div>"),
  _tmpl$2 = _template$("<div>Strict Mode Content</div>");
const StrictMode = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(StrictMode, {
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > should work with strict mode and error boundary 1`] = `
"import { createComponent as _createComponent$, template as _template$ } from "essor";
const _tmpl$ = _template$("<div>Strict Mode Protected Content</div>"),
  _tmpl$2 = _template$("<div>Error occurred!</div>");
const element = _createComponent$(StrictMode, {
  "children": [_createComponent$(ErrorBoundary, {
    "fallback": (() => {
      const _el6 = _tmpl$2();
      return _el6;
    })(),
    "children": [(() => {
      const _el5 = _tmpl$();
      return _el5;
    })()]
  })]
});"
`;

exports[`should work with jsx client transform > should work with suspense and error boundary combination 1`] = `
"import { createComponent as _createComponent$, template as _template$ } from "essor";
const _tmpl$ = _template$("<div>Protected and Suspended Content</div>"),
  _tmpl$2 = _template$("<div>Error occurred!</div>"),
  _tmpl$3 = _template$("<div>Loading...</div>");
const element = _createComponent$(ErrorBoundary, {
  "fallback": (() => {
    const _el6 = _tmpl$2();
    return _el6;
  })(),
  "children": [_createComponent$(Suspense, {
    "fallback": (() => {
      const _el7 = _tmpl$3();
      return _el7;
    })(),
    "children": [(() => {
      const _el5 = _tmpl$();
      return _el5;
    })()]
  })]
});"
`;

exports[`should work with jsx client transform > should work with suspense and lazy loading 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div data-lazy></div>"),
  _tmpl$2 = _template$("Lazy Content"),
  _tmpl$3 = _template$("<div>Loading...</div>");
const LazyComponent = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
LazyComponent._lazy = true;
const element = _createComponent$(Suspense, {
  "fallback": (() => {
    const _el7 = _tmpl$3();
    return _el7;
  })(),
  "children": [_createComponent$(LazyComponent, {
    "children": [(() => {
      const _el6 = _tmpl$2();
      return _el6;
    })()]
  })]
});"
`;

exports[`should work with jsx client transform > should work with suspense boundaries 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _tmpl$ = _template$("<div data-suspense></div>"),
  _tmpl$2 = _template$("<div>Content</div>"),
  _tmpl$3 = _template$("<div>Loading...</div>");
const Suspense = ({
  children,
  fallback
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  _insert$(_nodes[0], () => fallback);
  return _el;
})();
const element = _createComponent$(Suspense, {
  "fallback": (() => {
    const _el4 = _tmpl$3();
    return _el4;
  })(),
  "children": [(() => {
    const _el3 = _tmpl$2();
    return _el3;
  })()]
});"
`;

exports[`should work with jsx client transform > transforms JSX element with JSX fragment 1`] = `
"import { createComponent as _createComponent$, Fragment as _Fragment$, template as _template$ } from "essor";
const _tmpl$ = _template$("<p>Paragraph 1</p>"),
  _tmpl$2 = _template$("<p>Paragraph 2</p>");
const element = _Fragment$({
  "children": [(() => {
    const _el3 = _tmpl$();
    return _el3;
  })(), (() => {
    const _el4 = _tmpl$2();
    return _el4;
  })()]
});"
`;

exports[`should work with jsx client transform > transforms JSX element with JSX fragment as children 1`] = `
"import { createComponent as _createComponent$, Fragment as _Fragment$, template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<p>Paragraph 1</p>"),
  _tmpl$2 = _template$("<p>Paragraph 2</p>"),
  _tmpl$3 = _template$("<div></div>");
const element = (() => {
  const _el3 = _tmpl$3();
  const _nodes3 = _mapNodes$(_el3, [1]);
  _insert$(_nodes3[0], () => _Fragment$({
    "children": [(() => {
      const _el = _tmpl$();
      return _el;
    })(), (() => {
      const _el2 = _tmpl$2();
      return _el2;
    })()]
  }));
  return _el3;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with SVG tags 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<svg><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" stroke=\\"black\\" stroke-width=\\"3\\" fill=\\"red\\"></circle></svg>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with attributes 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div id=\\"myId\\" class=\\"myClass\\">Hello, World!</div>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with boolean attribute 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<input disabled></input>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with children 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with class and style attributes 1`] = `
"import { computed as _computed$, template as _template$, mapNodes as _mapNodes$, setClass as _setClass$, setStyle as _setStyle$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const hasClass = true;
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setClass$(_nodes[0], _computed$(() => hasClass ? 'myClass' : ''));
  _setStyle$(_nodes[0], style);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with conditional attributes 1`] = `
"import { computed as _computed$, template as _template$, mapNodes as _mapNodes$, setClass as _setClass$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const hasClass = true;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setClass$(_nodes[0], _computed$(() => hasClass ? 'myClass' : 'otherClass'));
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with function components 1`] = `
"import { createComponent as _createComponent$, template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<div><div></div></div>");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 2]);
  _insert$(_nodes[0], () => _createComponent$(MyComponent, {
    "text": "Component 1"
  }), _nodes[1]);
  _insert$(_nodes[1], () => _createComponent$(MyComponent, {
    "text": "Component 2"
  }));
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with null and undefined attributes 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setAttr as _setAttr$, setClass as _setClass$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "id", null);
  _setClass$(_nodes[0], undefined);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with null and undefined children 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 2, 4]);
  _insert$(_nodes[0], () => null, _nodes[1]);
  _insert$(_nodes[0], () => undefined, _nodes[2]);
  _insert$(_nodes[0], () => false, _nodes[2]);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with null and undefined in expressions 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<div><p>'s Profile</p><p>Paragraph 2</p></div>");
const name = null;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 2, 3, 4]);
  _insert$(_nodes[1], () => name, _nodes[2]);
  _insert$(_nodes[0], () => undefined, _nodes[3]);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with self-closing tags 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div><img src=\\"image.jpg\\" alt=\\"Image 1\\"></img><img src=\\"image.jpg\\" alt=\\"Image 2\\"></img></div>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with spread attributes 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setSpread as _setSpread$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const props = {
  id: 'myId',
  class: 'myClass'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setSpread$(_nodes[0], props);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms JSX element with style attribute 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, setStyle as _setStyle$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setStyle$(_nodes[0], style);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms client JSX element with dynamic expressions 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<div>Hello,<!>!</div>");
const name = 'John';
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 4]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms client JSX element with multiple dynamic expressions 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$ } from "essor";
const _tmpl$ = _template$("<div>Hello,<!>!<p>'s Profile<span>is a developer.<!>is a designer.</span></p></div>");
const name = 'John';
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 4, 5, 6, 7, 8, 10]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  _insert$(_nodes[2], () => name, _nodes[3]);
  _insert$(_nodes[4], () => name, _nodes[5]);
  _insert$(_nodes[4], () => name, _nodes[6]);
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms client JSX element with nested expressions and children 1`] = `
"import { template as _template$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$ } from "essor";
const _tmpl$ = _template$("<div><p>'s Profile</p><ul></ul></div>"),
  _tmpl$2 = _template$("<li>Item</li>");
const name = 'John';
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [2, 3, 4]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  _insert$(_nodes[2], () => Array.from({
    length: 3
  }, (_, i) => (() => {
    const _el2 = _tmpl$2();
    const _nodes2 = _mapNodes$(_el2, [1]);
    _insert$(_nodes2[0], () => i + 1);
    _setAttr$(_nodes2[0], "key", i);
    return _el2;
  })()));
  return _el;
})();"
`;

exports[`should work with jsx client transform > transforms simple JSX element 1`] = `
"import { template as _template$ } from "essor";
const _tmpl$ = _template$("<div>Hello, World!</div>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;
